# coaster_scripts

./: .env.example  README.md  combined.json  git_repos.json  is_integration_test.py  pattern_analysis.py  pattern_categorization.py  pattern_rating.py  pattern_statistics.py  process_mined_repos.py  pyproject.toml  total_endpoints.json
analysis/: catwatch.json  features-service.json  genome-nexus.json  gestaohospital.json  languagetool.json  ocvn.json  proxyprint.json  scout-api.json  session-service.json
examples/: API_gestaohospial.txt  manual_scout_api.txt  restart_EMB.txt  restart_features_service.txt
